--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,12 @@
     margin-bottom: 60px;
 
 }
+
+/* Container
+=====================*/
+.container {
+    width: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 0 50px;
+}
