--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     text-align: center;
 }
 
-.about__title {
+.title {
     margin-top: 70px;
     margin-bottom: 35px
 }
@@ -13,6 +13,7 @@
     margin-bottom: 60px;
 
 }
+
 
 /* Container
 =====================*/
