--- a/src/components/PopupForm/PopupForm.css
+++ b/src/components/PopupForm/PopupForm.css
@@ -41,13 +41,12 @@
   
   
   .modal__close {
-    
     text-decoration: none;
     color: #000;
     opacity: 0.5;
     font-size: 50px;
     line-height: 20px;
-  
+    cursor: pointer;
   }
   .modal__close:hover {
     opacity: 1;
