--- a/src/pages/Basket.css
+++ b/src/pages/Basket.css
@@ -16,10 +16,14 @@
   
   .basket__inner {
     border: 1px solid #a8a8a7;
-    width: 69%;
-    
-    
-    
+    width: 69%; 
+    display: flex;
+    flex-direction: column;
+  }
+
+  .basket__empty {
+    font-size: 20px;
+    margin: auto;
   }
   
   .basket__payment {
@@ -29,13 +33,14 @@
   }
   
   .basket__order {
-    
     border-top: 1px solid #a8a8a7;
     border-bottom: 1px solid #a8a8a7;
     display: flex;
     justify-content: space-between;
     margin: 30px;
   }
+
+ 
   
   .order__name {
     display: flex;
@@ -49,6 +54,7 @@
   .order__title {
     display: inline-block;
     color: #111;
+    text-transform: capitalize;
   }
   .order__subtitle {
     display: block;
