--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -53,7 +53,7 @@
 }
 
 .header__login img {
-    width: 70px;
+    width: 60px;
     cursor: pointer;
 }
 
@@ -66,6 +66,30 @@
     color: #fff;
     font-size: 24px;
     margin-right: 15px;
-    width: 70px;
+    width: 60px;
+    height: 60px;
     cursor: pointer;
 }
+
+.header__basket {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .badge {
+    position: absolute;
+    top: 35px;
+    right: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 25px;
+    height: 25px;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    background-color: red;
+    color: white;
+    font-size: 12px;
+    font-weight: bold;
+  }
+  
