--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,66 +1,106 @@
 .btn__order {
-    display: flex;
-    padding: 10px 13px;
-    border-radius: 30px;
-    max-width: 270px;
-    margin-right: 53px;
-    margin-left: 53px;
-  }
+  display: flex;
+  padding: 10px 13px;
+  border-radius: 30px;
+  max-width: 270px;
+  margin-right: 53px;
+  margin-left: 53px;
+}
 
-  .btn__call {
-    position: relative;
-  }
-  
-  .btn__call>img {
-    position: absolute;
-    left:50px;
-    top:10px;    
+.btn__call {
+  position: relative;
+}
 
-  }
-  
-  .btn__order p {
-    text-align: center;
-  }
+.btn__call > img {
+  position: absolute;
+  left: 50px;
+  top: 10px;
+}
 
-  .btn__send {
-    padding: 5px 18px;
-    margin: 30px auto;
-    border: none;
+.btn__order p {
+  text-align: center;
+}
+
+.btn__send {
+  padding: 5px 18px;
+  margin: 30px auto;
+  border: none;
 }
 
 .btn {
-    display: inline-block;
-    vertical-align: top;
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
-    background-color: #e30613;
-    color: #fff;
-    padding: 12px 25px;
-    border: none;
-    border-radius: 20px;
-    cursor: pointer;
-    text-decoration: none;
+  display: inline-block;
+  vertical-align: top;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  background-color: #e30613;
+  color: #fff;
+  padding: 12px 25px;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  text-decoration: none;
 }
 .btn:hover {
-    background-color: #ff0011;
+  background-color: #ff0011;
 }
 .btn__login {
-    margin-left: 60px;
+  margin-left: 60px;
 }
 
 .btn__reg {
-    margin: 30px auto;
-    max-width: 200px;
+  margin: 30px auto;
+  max-width: 200px;
 }
 
 .btn__acc {
-    font-size: 25px;
-    padding: 20px;
-    border-radius: 50%;
-    margin-left: 20px;
+  font-size: 25px;
+  padding: 20px;
+  border-radius: 50%;
+  margin-left: 20px;
 }
 
 .btn__basket img {
-    width: 80px;
-    height: 80px;
+  width: 80px;
+  height: 80px;
+}
+
+@media (max-width: 1080px) {
+  .btn__order {
+    margin: 0;
+  }
+}
+
+@media (max-width: 950px) {
+  .btn__order {
+    margin: 25px 0 0 0;
+  }
+  .btn__pay {
+    padding: 10px 10px;
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 680px) {
+  .btn {
+    font-size: 14px;
+    padding: 10px 15px;
+    margin: 0 auto;
+}
+.btn__reg {
+  margin: 15px auto;
+}
+.btn__send {
+  margin: 25px auto;
+}
+
+.btn__call {
+  width: 30px;
+  height: 30px;
+  margin: 0;
+}
+.btn__order {
+  width: 170px;
+  margin: 25px 0 0 0;
+
+}
 }
