--- a/src/components/MenuItem/MenuItem.css
+++ b/src/components/MenuItem/MenuItem.css
@@ -50,3 +50,9 @@
     color: #ff0011; 
     border-radius: 50%;
 }
+
+@media (max-width: 680px) {
+    .menu__container {
+        width: 49%;
+    }
+}
