--- a/src/components/PopupForm/PopupForm.css
+++ b/src/components/PopupForm/PopupForm.css
@@ -2,102 +2,197 @@
 =====================*/
 
 .modal {
-    display: block;
-   position: fixed;
-   z-index: 1;
-  }
-  
-  .modal__bg {
-    
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.3);
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-    
-  }
-  
+  display: block;
+  position: fixed;
+  z-index: 1;
+}
+
+.modal__bg {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal__content {
+  width: 500px;
+  background-color: #fff;
+  border: 1px solid #a8a8a7;
+  max-width: 80%;
+  transition: all 0.8s ease 0s;
+}
+
+.modal__title {
+  font-family: 'Lato', sans-serif;
+  font-weight: bold;
+}
+
+.modal__close {
+  text-decoration: none;
+  color: #000;
+  opacity: 0.5;
+  font-size: 50px;
+  line-height: 20px;
+  cursor: pointer;
+}
+.modal__close:hover {
+  opacity: 1;
+}
+
+.modal__header {
+  padding: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #a8a8a7;
+}
+
+.modal__title {
+  font-size: 26px;
+}
+
+.modal__form {
+  display: flex;
+  flex-direction: column;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.login__img {
+  margin: 0 auto 10px auto;
+}
+.login__img:last-child {
+  margin-bottom: 30px;
+}
+.login__img img {
+  height: 50px;
+  width: 250px;
+}
+
+.modal__link {
+  color: #888886;
+  padding-top: 20px;
+  font-size: 18px;
+}
+
+.modal__buttons {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  font-size: 20px;
+}
+
+@media (max-width: 950px) {
   .modal__content {
-    
-    width: 500px;
-    background-color: #fff;
-    border: 1px solid #a8a8a7 ;
-    max-width: 80%;
-    transition: all 0.8s ease 0s;
+    width: 400px;
+    max-width: 50%;
   }
-  
-  .modal__title {
-    font-family: 'Lato', sans-serif;
-    font-weight: bold;
-  }
-  
-  
-  
-  .modal__close {
-    text-decoration: none;
-    color: #000;
-    opacity: 0.5;
-    font-size: 50px;
-    line-height: 20px;
-    cursor: pointer;
-  }
-  .modal__close:hover {
-    opacity: 1;
-  }
-  
   .modal__header {
-    padding: 30px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 1px solid #a8a8a7;
-    
+    padding: 20px;
   }
-  
+  .modal__close {
+    font-size: 40px;
+  }
   .modal__title {
-    font-size: 26px;
-  }
-  
-  .modal__form {
-    display: flex;
-    flex-direction: column;
-    padding-left: 50px;
-    padding-right: 50px;
-  }
-  
-  .login__img {
-    margin: 0 auto 10px auto;
-  
-  }
-  .login__img:last-child {
-    
-    margin-bottom: 30px;
-  }
-  .login__img img {
-    height: 50px;
-    width: 250px;   
-  }
-  
-  
-  .modal__link {
-    color: #888886;
-    padding-top: 20px;
     font-size: 18px;
   }
-  
-  .modal__buttons {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    font-size: 20px;
-    
+  .modal__form {
+    padding-left: 30px;
+    padding-right: 30px;
   }
+  .modal__form .form__label {
+    font-size: 16px;
+    margin-top: 20px;
+  }
+  .modal__form .form__name {
+    height: 30px;
+  }
+  .modal__link {
+    padding-top: 15px;
+    font-size: 14px;
+  }
+
+  .modal__buttons {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 16px;
+  }
+
+  .modal__buttons .btn {
+    font-size: 16px;
+    padding: 10px 14px;
+    border-radius: 17px;
+  }
+
+  .login__img {
+    margin: 0 auto 10px auto;
+  }
+  .login__img:last-child {
+    margin-bottom: 20px;
+  }
+  .login__img img {
+    height: 45px;
+    width: 225px;
+  }
+}
+
+@media (max-width: 680px) {
+  .modal__content {
+    width: 300px;
+    max-width: 70%;
+  }
+  .modal__header {
+    padding: 10px;
+  }
+  .modal__close {
+    font-size: 30px;
+  }
+  .modal__title {
+    font-size: 16px;
+  }
+  .modal__form {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .modal__form .form__label {
+    font-size: 14px;
+    margin-top: 10px;
+  }
+  .modal__form .form__name {
+    border-radius: 8px;
+    height: 25px;
+  }
+  .modal__link {
+    padding-top: 10px;
+    font-size: 12px;
+  }
+  .modal__buttons {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 12px;
+  }
+  .modal__buttons .btn {
+    font-size: 13px;
+    padding: 8px 10px;
+    border-radius: 12px;
+  }
+  .login__img {
+    margin: 0 auto 10px auto;
+  }
+  .login__img:last-child {
+    margin-bottom: 10px;
+  }
+  .login__img img {
+    height: 30px;
+    width: 150px;
+  }
+}
