--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -2,52 +2,62 @@
 =====================*/
 
 .form {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .form__title {
-    margin-top: 50px;
-    line-height: 33px;
+  margin-top: 50px;
+  line-height: 33px;
 }
 
 .form__subtitle {
-    font-family: 'Roboto', sans-serif;
-    color: #a8a8a7;
-    text-align: center;
-    font-size: 20px;
-    font-weight: normal;
-    margin: 0;
-    line-height: 33px;
+  font-family: 'Roboto', sans-serif;
+  color: #a8a8a7;
+  text-align: center;
+  font-size: 20px;
+  font-weight: normal;
+  margin: 0;
+  line-height: 33px;
 }
 
-
 .form__inner {
-    display: flex;
-    flex-direction: column;
-    max-width: 540px;
-    width: 100%;
-    margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  max-width: 540px;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .form__comment {
-    height: 134px;
-    padding: 10px 10px;
-    margin-top: 10px;
-    background-color: #dddddd;
-    border: none;
-    resize: none;
-    border-radius: 10px;
+  height: 134px;
+  padding: 10px 10px;
+  margin-top: 10px;
+  background-color: #dddddd;
+  border: none;
+  resize: none;
+  border-radius: 10px;
 }
 
 .form__message {
-    background-color: #4caf50;
-    color: #ffffff;
-    padding: 10px;
-    text-align: center;
-    margin-top: 20px;
-    border-radius: 15px;
-   
+  background-color: #4caf50;
+  color: #ffffff;
+  padding: 10px;
+  text-align: center;
+  margin-top: 20px;
+  border-radius: 15px;
+}
+
+@media (max-width: 680px) {
+  .form__title {
+    margin-top: 25px;
   }
-  
- 
+
+  .form__subtitle {
+    font-size: 14px;
+  }
+
+  .form__label {
+    margin-top: 15px;
+  }
+}
