--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,11 @@
     padding: 0 10px;
   }
 
+  .title {
+    margin-top: 25px;
+    margin-bottom: 15px;
+  }
+
   h1 {
     font-size: 20px;
   }
@@ -72,6 +77,7 @@
 
   .about__subtitle {
     font-size: 16px;
+    margin-bottom: 25px;
   }
 
   .fc__logo {
