--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -10,6 +10,15 @@
     background-color: #dddddd;
     border: none;
     border-radius: 10px;
-    
-
 }
+
+@media (max-width: 680px) { 
+    .form__label {
+      margin-top: 15px;
+      font-size: 16px;
+    }
+
+    .form__name {
+        height: 28px;
+    }
+  }
