--- a/src/components/MenuItem/MenuItem.css
+++ b/src/components/MenuItem/MenuItem.css
@@ -1,58 +1,64 @@
 .menu__container {
-    width: 32%;
-    margin-bottom: 27px;
+  width: 32%;
+  margin-bottom: 27px;
 }
 
 .menu__inner {
-    display: flex;
-    margin-top: 15px;
-    justify-content: space-between;
+  display: flex;
+  margin-top: 15px;
+  justify-content: space-between;
 }
 
 .menu__count {
-    display: flex;
-    justify-content: space-around;
-    border: 2px solid #e30613 ;
-    border-radius: 10px;
-    padding: 10px;
-    width: 40%;
+  display: flex;
+  justify-content: space-around;
+  border: 2px solid #e30613;
+  border-radius: 10px;
+  padding: 10px;
+  width: 40%;
 }
 
 .menu__count:hover {
-    border: 2px solid #ff0011 ;
+  border: 2px solid #ff0011;
 }
 
-/* .menu__count div{
-    padding: 8px 15px;    
-} */
 .menu__img {
-    width: 100%;
-    
+  width: 100%;
 }
 
 .menu__counter {
-    color: #000;
-    font-size: 22px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #000;
+  font-size: 22px;
 }
 
 .menu__increment {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
-    color: #e30613;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  color: #e30613;
 }
 
 .menu__increment:hover {
-    color: #ff0011; 
-    border-radius: 50%;
+  color: #ff0011;
+  border-radius: 50%;
 }
 
 @media (max-width: 680px) {
-    .menu__container {
-        width: 49%;
-    }
+  .menu__container {
+    width: 49%;
+    margin-bottom: 15px;
+  }
+  .menu__counter {
+    font-size: 18px;
+  }
+  .menu__count {
+    padding: 0;
+  }
 }
