--- a/src/components/PopupForm/PopupForm.css
+++ b/src/components/PopupForm/PopupForm.css
@@ -184,6 +184,7 @@
     font-size: 13px;
     padding: 8px 10px;
     border-radius: 12px;
+    margin: 0;
   }
   .login__img {
     margin: 0 auto 10px auto;
