--- a/src/components/slider/slider.css
+++ b/src/components/slider/slider.css
@@ -43,4 +43,12 @@
       height: 230px;
       margin-bottom: 25px;
   }
+  .swiper-pagination-bullet {    
+    width: 10px;
+    height: 10px;
+  }
+  .swiper-button-prev::after,
+  .swiper-button-next::after {
+    font-size: 20px;    
+  }
   }
