add alert for success and errors

--- a/src/components/Alert/Alert.css
+++ b/src/components/Alert/Alert.css
@@ -1,20 +1,27 @@
 .alert {
     display: flex;
     justify-content: center;
-    align-items: center;
-    color: #e30613;
-    border: 1px solid #e30613;
+    align-items: center; 
     border-radius: 10px;
-    margin-top: 20px;
-    
+    margin-top: 20px;  
 }
 
 .alert__icon {
     width: 30px;
     height: 30px;
     margin-right: 10px;
+    padding: 2px;
 }
 
 .alert__message {
     font-size: 16px;
+}
+.success {
+    color: #009300;
+    border: 1px solid #009300
+}
+
+.error {
+    color: #e30613;
+    border: 1px solid #e30613;
 }
