--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -52,6 +52,9 @@
 .btn__login {
   margin-left: 60px;
 }
+.btn__pay {
+  margin: 20px auto 10px 10px;
+}
 
 .btn__reg {
   margin: 30px auto;
@@ -70,6 +73,12 @@
   height: 80px;
 }
 
+.btn__summary__pay {
+  display: block;
+  margin: 0 auto;
+  margin-top: 15px;
+}
+
 @media (max-width: 1080px) {
   .btn__order {
     margin: 0;
@@ -81,7 +90,7 @@
     margin: 25px 0 0 0;
   }
   .btn__pay {
-    padding: 10px 10px;
+    padding: 10px 15px;
     font-size: 16px;
   }
 }
@@ -106,5 +115,12 @@
 }
 .menu__btn {
   margin-right: 0;
+}
+.btn__pay {
+  margin: 0;
+  padding: 10px;
+}
+.btn__summary__pay {
+  margin-top: 15px;
 }
 }
