--- a/src/components/PopupForm/PopupForm.css
+++ b/src/components/PopupForm/PopupForm.css
@@ -169,12 +169,17 @@
     margin-top: 10px;
     margin-bottom: 10px;
     font-size: 12px;
+    flex-direction: column;
   }
   .modal__buttons .btn {
     font-size: 13px;
     padding: 8px 10px;
     border-radius: 12px;
     margin: 0;
+  }
+
+  .modal__buttons p {
+    margin: 5px 0;
   }
   .login__img {
     margin: 0 auto 10px auto;
