--- a/src/index.css
+++ b/src/index.css
@@ -9,13 +9,13 @@ body {
   font-family: 'Lato', sans-serif;
   font-size: 14px;
   color: #a8a8a7;
-  letter-spacing: .25px;
+  letter-spacing: 0.25px;
 }
 
 #root {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 *,
@@ -40,7 +40,6 @@ h1 {
   font-style: normal;
   color: #a8a8a7;
   text-align: center;
-
 }
 
 h2 {
@@ -48,5 +47,18 @@ h2 {
   font-size: 16px;
   color: #404041;
   text-align: left;
+}
 
+@media (max-width: 680px) {
+
+  body {
+    font-size: 12px;
+  }
+  h1 {
+    font-size: 20px;
+  }
+
+  h2 {
+    font-size: 14px;
+  }
 }
