--- a/src/pages/Basket.css
+++ b/src/pages/Basket.css
@@ -121,9 +121,7 @@
   margin-left: 20px;
   margin-top: 20px;
 }
-.btn__pay {
-  margin: 20px auto 10px 10px;
-}
+
 
 @media (max-width: 680px) { 
   .basket {
@@ -154,23 +152,19 @@
 }
   .basket__payment {
     width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding: 10px;
   }
 
   .payment__title {
-    font-size: 20px;
+    font-size: 18px;
     margin: 0;
-    margin-right: 10px;
+    margin-bottom: 5px;
   }
   .payment__price {
-    font-size: 24px;
+    font-size: 22px;
     margin: 0;
-    margin-right: auto;
+    margin-bottom: 5px;
+    margin-left: 10px;
   }
-  .btn__pay {
-    margin: 0;
-  }
+  
 }
